[tool.poetry]
name = "some_aiohttp_middleware"
version = "0.1.0"
description = "Middleware framework for aiohttp"
authors = ["tommmlij <tommmlij@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/tommmlij/some-aiohttp-middleware"
packages = [{ include = "some_aiohttp_middleware", from = "src" }]

[tool.poetry.urls]
"GitHub: issues" = "https://github.com/tommmlij/some-aiohttp-middleware/issues"
"GitHub: repo" = "https://github.com/tommmlij/some-aiohttp-middleware"

[tool.poetry.dependencies]
python = ">=3.8.1 <3.13"
aiohttp = "^3.9.3"
marshmallow = "^3.20.2"
sqlalchemy = "^2.0.27"
asyncpg = "^0.29.0"cd

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
flake8 = "^7.0.0"
pytest-asyncio = "^0.23.5"
pytest-aiohttp = "^1.0.5"
colorlog = "^6.8.2"
coverage = "^7.4.3"
mypy = "^1.8.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
flake8 = "^7.0.0"
pytest-asyncio = "^0.23.5"
pytest-aiohttp = "^1.0.5"
coverage = "^7.4.3"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^(v|test)((?P<epoch>\\d+)!)?(?P<base>\\d+(\\.\\d+)*)"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
omit = ["./tests/*"]
