[tool.poetry]
name = "some-aiohttp-middleware"
version = "0.1.13"
license = "MIT"
description = "Middleware framework for aiohttp"
authors = ["tommmlij <tommmlij@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/tommmlij/some-aiohttp-middleware"
packages = [{ include = "some_aiohttp_middleware", from = "src" }]

[tool.poetry.urls]
"GitHub: issues" = "https://github.com/tommmlij/some-aiohttp-middleware/issues"
"GitHub: repo" = "https://github.com/tommmlij/some-aiohttp-middleware"

[tool.poetry.dependencies]
python = ">=3.9 <3.13"
aiohttp = "^3"
sqlalchemy = "^2"
asyncpg = "^0"
pydantic = "^2"
pydantic-settings = "^2"
aiohttp-pydantic = "^2"
aiomcache = "^0"
aioboto3 = "^14"

[tool.poetry.group.dev.dependencies]
pytest = "^8"
flake8 = "^7"
pytest-asyncio = "^0"
pytest-aiohttp = "^1"
colorlog = "^6"
coverage = "^7"
mypy = "^1"
black = "^24"
isort = "^5"
aiohttp-middlewares = "^2"

[tool.poetry.group.test.dependencies]
pytest = "^8"
flake8 = "^7"
pytest-asyncio = "^0"
pytest-aiohttp = "^1"
coverage = "^7"
mypy = "^1"
black = "^24"
isort = "^5"
aiohttp-middlewares = "^2"

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^(v|test)((?P<epoch>\\d+)!)?(?P<base>\\d+(\\.\\d+)*)"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
omit = ["./tests/*"]
